# polycircuit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: format.yml
cmake/: polycircuit-config.cmake.in
cpp/: CMakeLists.txt
cpp/examples/sigmoid_usage/: CMakeLists.txt
cpp/examples/signum_usage/: signum.cc
cpp/include/cifar/: README.md  config.json
cpp/include/cifar/openfhe/: cifar_ckks.h
cpp/include/matrix_mult/: README.md  ckks.hpp
cpp/include/parity/: README.md  parity_ckks.h
cpp/include/parity/lattigo/: config.json  main.go
cpp/include/parity/lattigo/internal/solution/: solution.go
cpp/include/parity/openfhe/: config.json
cpp/include/polycircuit/: IComponent.hpp
cpp/include/polycircuit/component/README/: signum_README.md
cpp/include/relu/: README.md  config.json  relu_ckks.h
cpp/include/sigmoid/: README.md  ckks.hpp
cpp/include/signum/: README.md  ckks.hpp
cpp/src/: CMakeLists.txt
cpp/src/matrix_mult/: ckks.cpp
cpp/src/sigmoid/: ckks.cpp
cpp/src/signum/: ckks.cpp
examples/: CMakeLists.txt
examples/CIFAR10Usage/: CMakeLists.txt  cifar10.cc  class-1.txt  class-6.txt  class-7.txt  class-9.txt
examples/LogisticFunctionUsage/: CMakeLists.txt  LogisticFunctionUsage.cc
examples/MatrixMultiplicationUsage/: CMakeLists.txt  MatrixMultiplicationUsage.cc
examples/SignEvaluationUsage/: CMakeLists.txt  SignEvaluationUsage.cc
examples/cifar10/: CMakeLists.txt  main.cpp
examples/logreg/: CMakeLists.txt  main.cpp
examples/lut/: CMakeLists.txt  main.cpp
examples/matrix_mul/: CMakeLists.txt  main.cpp
examples/matrix_mult_usage/: CMakeLists.txt  matrix_mult.cc
examples/max/: CMakeLists.txt  main.cpp
examples/parity/: CMakeLists.txt  main.cpp
examples/shl/: CMakeLists.txt  main.cpp
examples/sigmoid_usage/: sigmoid.cc
examples/signum_usage/: CMakeLists.txt  signum.cc
go/parity/: go.sum
include/polycircuit/: IComponent.hpp  ckks_component.h  component.h  export.h  polycircuit.h
include/polycircuit/cifar10/: README.md  cifar10.hpp  weights.txt
include/polycircuit/component/: Cifar10.hpp  MatrixMult.hpp  Parity.hpp  Relu.hpp  Sigmoid.hpp  Signum.hpp
include/polycircuit/component/CIFAR10ImageClassification/: CIFAR10ImageClassification.hpp  CIFAR10ImageClassification_weights.txt
include/polycircuit/component/EVMTrack/SHL/: SHL.hpp
include/polycircuit/component/LogisticFunction/: LogisticFunction.hpp
include/polycircuit/component/LookupTable/: LookupTable.hpp
include/polycircuit/component/MatrixMultiplication/: MatrixMultiplication.hpp
include/polycircuit/component/MaxElement/: MaxElement.hpp
include/polycircuit/component/ParityChallenge/: ParityChallenge.hpp
include/polycircuit/component/README/: cifar10_README.md  lookup_README  matrix_mult_README.md  parity_README.md  relu_README.md
include/polycircuit/component/ReLUFunction/: ReLUFunction.hpp
include/polycircuit/component/SignEvaluation/: SignEvaluation.hpp
include/polycircuit/logreg/: LogReg.hpp  README.md
include/polycircuit/lut/: lut.hpp
include/polycircuit/matrix_mul/: README.md  matrix_mul.hpp
include/polycircuit/max/: max.hpp
include/polycircuit/parity/: README.md  parity.hpp
include/polycircuit/shl/: shl.hpp
src/: ckks_component.cpp  polycircuit.cpp
tests/: CMakeLists.txt  cifar10.cpp
